@startuml
skinparam classAttributeIconSize 0

package math {
    class ConfusionMap <<struct>> {
        +Data: []state.Subscript
        +NewConfusionMap(arena: []byte) ConfusionMap
        +Generate(rnd: io.Reader, maxSub: state.Subscript, perm: *Permutation) error
        +Eval(s: state.Bitset) Vector
    }

    class Monomial <<type>> {
        +NewMonomial(subs: ...state.Subscript) Monomial
        +CompareMonomials(a: Monomial, b: Monomial) int
        +Mul(other: Monomial) Monomial
        +Subscripts(dst: []uint8) []uint8
        +Eval(b: state.Bitset) uint8
    }

    class Permutation <<struct>> {
        +Data: []state.Subscript
        +NewPermutation(arena: []byte) *Permutation
        +Generate(rnd: io.Reader, entropy: []byte) error
        +Gather(s: *state.Bitset, foldIdx: int) Vector
        +Scatter(s: *state.Bitset, foldIdx: int, v: Vector)
    }

    class SLE <<struct>> {
        -data: []Vector
        +NewSLE(arena: []byte) SLE
        +Generate(rnd: io.Reader) error
        +Solve(b: Vector) Vector
        +Eval(x: Vector) Vector
        +Coefs(dst: []Vector)
        -substituteForward(v: Vector) Vector
        -substituteBackward(v: Vector) Vector
        -multiplyLower(v: Vector) Vector
        -multiplyUpper(v: Vector) Vector
    }

    class Bitset <<type>> {
        +Read(src: []byte)
        +Write(dst: []byte)
        +At(idx: Subscript) uint8
        +SetAt(idx: Subscript, bit: uint8)
        +Compare(other: Bitset) int
        +Or(other: Bitset) Bitset
        +XorWith(other: Bitset)
        +Contains(other: Bitset) bool
        +Subscripts(dst: []Subscript) []Subscript
    }

    class Vector <<type>> {
        +Dot(other: Vector) Vector
    }

}

ConfusionMap ..> Bitset
ConfusionMap ..> Permutation
ConfusionMap ..> Vector

Monomial --|> Bitset

Permutation ..> Bitset
Permutation ..> Vector

SLE *-- Vector

@enduml